Search: Set max-width on truncated names. Fixes #647

--- a/github-dark.css
+++ b/github-dark.css
@@ -1883,6 +1883,9 @@
   .timeline-comment-header .css-truncate-target {
     max-width: 250px !important;
   }
+  .jump-to-suggestions [aria-selected="true"] .jump-to-suggestion-name.css-truncate-target {
+    max-width: 50% !important;
+  }
   /* tooltip */
   .octotip {
     background-color: #003 !important;
